Added current weather layout (WIP).

--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -1,13 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColorMain"
+    android:padding="@dimen/doubleMinPadding"
     tools:context=".feature.current.CurrentWeatherFragment">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:id="@+id/tv_city"
+        style="@style/TextCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Краснодар" />
 
-</FrameLayout>
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/doubleMinPadding"
+        android:orientation="horizontal"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/tv_current_location"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RadioButton
+            android:id="@+id/rb_celsius"
+            style="@style/TextMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/textColorMain"
+            android:text="@string/celsius" />
+
+        <RadioButton
+            android:id="@+id/rb_fahrenheit"
+            style="@style/TextMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:buttonTint="@color/textColorMain"
+            android:text="@string/fahrenheit" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/tv_change_city"
+        style="@style/TextAdditional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/doubleMinPadding"
+        android:text="@string/change_city"
+        app:layout_constraintStart_toStartOf="@+id/tv_city"
+        app:layout_constraintTop_toBottomOf="@+id/tv_city" />
+
+    <TextView
+        android:id="@+id/tv_current_location"
+        style="@style/TextAdditional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_location"
+        android:drawablePadding="@dimen/minPadding"
+        android:text="@string/current_location"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_change_city"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/tv_change_city"
+        app:layout_constraintTop_toTopOf="@+id/tv_change_city" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_center_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <ImageView
+        android:id="@+id/iv_weather_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/tv_wind_label"
+        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/tv_change_city"
+        tools:src="@tools:sample/avatars"
+        android:contentDescription="@string/content_desc_weather_icon" />
+
+    <TextView
+        android:id="@+id/tv_temperature"
+        style="@style/TextTemperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/tv_current_location"
+        tools:text="20º" />
+
+    <TextView
+        android:id="@+id/tv_weather_type"
+        style="@style/TextMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
+        app:layout_constraintVertical_bias="0.0"
+        tools:text="10 м/с, Западный" />
+
+    <TextView
+        android:id="@+id/tv_wind_label"
+        style="@style/TextAdditional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wind"
+        android:layout_marginBottom="@dimen/minPadding"
+        app:layout_constraintBottom_toTopOf="@+id/tv_wind_value"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_wind_value"
+        style="@style/TextMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/doubleMinPadding"
+        app:layout_constraintBottom_toTopOf="@+id/tv_humidity_label"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="10 м/с, Западный" />
+
+    <TextView
+        android:id="@+id/tv_humidity_label"
+        style="@style/TextAdditional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/minPadding"
+        android:text="@string/humidity"
+        app:layout_constraintBottom_toTopOf="@+id/tv_humidity_value"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_humidity_value"
+        style="@style/TextMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="60%" />
+
+    <TextView
+        android:id="@+id/tv_pressure_label"
+        style="@style/TextAdditional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/minPadding"
+        android:text="@string/pressure"
+        app:layout_constraintBottom_toTopOf="@+id/tv_pressure_value"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />
+
+    <TextView
+        android:id="@+id/tv_pressure_value"
+        style="@style/TextMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/doubleMinPadding"
+        app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_label"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
+        tools:text="752 мм рт. ст" />
+
+    <TextView
+        android:id="@+id/tv_rain_chance_label"
+        style="@style/TextAdditional"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/minPadding"
+        android:text="@string/rain_chance"
+        app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_value"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />
+
+    <TextView
+        android:id="@+id/tv_rain_chance_value"
+        style="@style/TextMain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
+        tools:text="10%" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
