--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="backgroundColorMain">#498CEC</color>
+    <color name="textColorMain">#FFFFFF</color>
+    <color name="textColorAdditional">#99FFFFFF</color>
+
 </resources>
