Added temperature switcher.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="textColorMain">#FFFFFF</color>
     <color name="textColorAdditional">#99FFFFFF</color>
 
+    <color name="tempSwitcherOutlineColor">#66FFFFFF</color>
+    <color name="tempSwitcherCheckedColor">#33FFFFFF</color>
+    <color name="tempSwitcherUncheckedColor">#00000000</color>
+
 </resources>
