--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -17,30 +17,58 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Краснодар" />
 
-    <RadioGroup
+    <TextView
+        android:id="@+id/tv_switcher_title"
+        style="@style/TextAdditional"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="º"
+        android:layout_marginRight="@dimen/minPadding"
+        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
+        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+        app:layout_constraintTop_toTopOf="@+id/radioGroup" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginBottom="@dimen/doubleMinPadding"
+        android:background="@drawable/temp_switcher_outline"
+        android:checkedButton="@id/rb_fahrenheit"
         android:orientation="horizontal"
-        app:layout_constraintVertical_bias="0.0"
+        android:tooltipText="hhh"
         app:layout_constraintBottom_toTopOf="@+id/tv_current_location"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <RadioButton
             android:id="@+id/rb_celsius"
             style="@style/TextMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:buttonTint="@color/textColorMain"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/temp_switcher_selector_left"
+            android:button="@null"
+            android:gravity="center"
+            android:paddingLeft="14dp"
+            android:paddingRight="14dp"
+            android:textColor="@drawable/temp_switcher_text_selector"
             android:text="@string/celsius" />
 
         <RadioButton
             android:id="@+id/rb_fahrenheit"
             style="@style/TextMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/temp_switcher_selector_right"
+            android:button="@null"
             android:buttonTint="@color/textColorMain"
+            android:gravity="center"
+            android:paddingLeft="14dp"
+            android:paddingRight="14dp"
+            android:textColor="@drawable/temp_switcher_text_selector"
             android:text="@string/fahrenheit" />
     </RadioGroup>
 
