--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="minPadding">8dp</dimen>
     <dimen name="doubleMinPadding">16dp</dimen>
 
+    <dimen name="tempSwitcherCornersRadius">8dp</dimen>
+
 </resources>
