--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -1,216 +1,233 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/backgroundColorMain"
-    android:padding="@dimen/doubleMinPadding"
-    tools:context=".feature.current.CurrentWeatherFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/tv_city"
-        style="@style/TextCity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Краснодар" />
+    <data>
 
-    <TextView
-        android:id="@+id/tv_switcher_title"
-        style="@style/TextAdditional"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="º"
-        android:layout_marginRight="@dimen/minPadding"
-        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
-        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
-        app:layout_constraintTop_toTopOf="@+id/radioGroup" />
+        <variable
+            name="viewmodel"
+            type="com.tadiuzzz.forecast.feature.current.CurrentWeatherViewModel" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginBottom="@dimen/doubleMinPadding"
-        android:background="@drawable/temp_switcher_outline"
-        android:checkedButton="@id/rb_fahrenheit"
-        android:orientation="horizontal"
-        android:tooltipText="hhh"
-        app:layout_constraintBottom_toTopOf="@+id/tv_current_location"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+    </data>
 
-        <RadioButton
-            android:id="@+id/rb_celsius"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/backgroundColorMain"
+        android:padding="@dimen/doubleMinPadding"
+        tools:context=".feature.current.CurrentWeatherFragment">
+
+        <TextView
+            android:id="@+id/tv_city"
+            style="@style/TextCity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(viewmodel.currentWeather.name)}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Краснодар" />
+
+        <TextView
+            android:id="@+id/tv_switcher_title"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/degree"
+            android:layout_marginRight="@dimen/minPadding"
+            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
+            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
+            app:layout_constraintTop_toTopOf="@+id/radioGroup" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginBottom="@dimen/doubleMinPadding"
+            android:background="@drawable/temp_switcher_outline"
+            android:checkedButton="@id/rb_fahrenheit"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/tv_current_location"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+            <RadioButton
+                android:id="@+id/rb_celsius"
+                style="@style/TextMain"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/temp_switcher_selector_left"
+                android:button="@null"
+                android:gravity="center"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:textColor="@drawable/temp_switcher_text_selector"
+                android:text="@string/celsius" />
+
+            <RadioButton
+                android:id="@+id/rb_fahrenheit"
+                style="@style/TextMain"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/temp_switcher_selector_right"
+                android:button="@null"
+                android:buttonTint="@color/textColorMain"
+                android:gravity="center"
+                android:paddingLeft="14dp"
+                android:paddingRight="14dp"
+                android:textColor="@drawable/temp_switcher_text_selector"
+                android:text="@string/fahrenheit" />
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/tv_change_city"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/doubleMinPadding"
+            android:text="@string/change_city"
+            app:layout_constraintStart_toStartOf="@+id/tv_city"
+            app:layout_constraintTop_toBottomOf="@+id/tv_city" />
+
+        <TextView
+            android:id="@+id/tv_current_location"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_location"
+            android:drawablePadding="@dimen/minPadding"
+            android:text="@string/current_location"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_change_city"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/tv_change_city"
+            app:layout_constraintTop_toTopOf="@+id/tv_change_city" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/vertical_center_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
+        <ImageView
+            android:id="@+id/iv_weather_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/tv_wind_label"
+            app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
+            app:layout_constraintTop_toBottomOf="@+id/tv_change_city"
+            tools:src="@tools:sample/avatars"
+            android:contentDescription="@string/content_desc_weather_icon" />
+
+        <TextView
+            android:id="@+id/tv_temperature"
+            style="@style/TextTemperature"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{String.format("%s", viewmodel.currentWeather.main.temp)}'
+            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
+            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
+            app:layout_constraintTop_toBottomOf="@+id/tv_current_location"
+            tools:text="20º" />
+
+        <TextView
+            android:id="@+id/tv_weather_type"
             style="@style/TextMain"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/temp_switcher_selector_left"
-            android:button="@null"
-            android:gravity="center"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:textColor="@drawable/temp_switcher_text_selector"
-            android:text="@string/celsius" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{String.format("%s", viewmodel.currentWeather.wind.speed)}'
+            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="10 м/с, Западный" />
 
-        <RadioButton
-            android:id="@+id/rb_fahrenheit"
+        <TextView
+            android:id="@+id/tv_wind_label"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/wind"
+            android:layout_marginBottom="@dimen/minPadding"
+            app:layout_constraintBottom_toTopOf="@+id/tv_wind_value"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_wind_value"
             style="@style/TextMain"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/temp_switcher_selector_right"
-            android:button="@null"
-            android:buttonTint="@color/textColorMain"
-            android:gravity="center"
-            android:paddingLeft="14dp"
-            android:paddingRight="14dp"
-            android:textColor="@drawable/temp_switcher_text_selector"
-            android:text="@string/fahrenheit" />
-    </RadioGroup>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{String.format("%s", viewmodel.currentWeather.wind.speed)}'
+            android:layout_marginBottom="@dimen/doubleMinPadding"
+            app:layout_constraintBottom_toTopOf="@+id/tv_humidity_label"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="10 м/с, Западный" />
 
-    <TextView
-        android:id="@+id/tv_change_city"
-        style="@style/TextAdditional"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/doubleMinPadding"
-        android:text="@string/change_city"
-        app:layout_constraintStart_toStartOf="@+id/tv_city"
-        app:layout_constraintTop_toBottomOf="@+id/tv_city" />
+        <TextView
+            android:id="@+id/tv_humidity_label"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/minPadding"
+            android:text="@string/humidity"
+            app:layout_constraintBottom_toTopOf="@+id/tv_humidity_value"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_current_location"
-        style="@style/TextAdditional"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_location"
-        android:drawablePadding="@dimen/minPadding"
-        android:text="@string/current_location"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_change_city"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/tv_change_city"
-        app:layout_constraintTop_toTopOf="@+id/tv_change_city" />
+        <TextView
+            android:id="@+id/tv_humidity_value"
+            style="@style/TextMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{String.format("%s", viewmodel.currentWeather.main.humidity)}'
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="60%" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_center_guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        <TextView
+            android:id="@+id/tv_pressure_label"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/minPadding"
+            android:text="@string/pressure"
+            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_value"
+            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />
 
-    <ImageView
-        android:id="@+id/iv_weather_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/tv_wind_label"
-        app:layout_constraintEnd_toStartOf="@+id/vertical_center_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/tv_change_city"
-        tools:src="@tools:sample/avatars"
-        android:contentDescription="@string/content_desc_weather_icon" />
+        <TextView
+            android:id="@+id/tv_pressure_value"
+            style="@style/TextMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{String.format("%s", viewmodel.currentWeather.main.pressure)}'
+            android:layout_marginBottom="@dimen/doubleMinPadding"
+            app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_label"
+            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
+            tools:text="752 мм рт. ст" />
 
-    <TextView
-        android:id="@+id/tv_temperature"
-        style="@style/TextTemperature"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
-        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
-        app:layout_constraintTop_toBottomOf="@+id/tv_current_location"
-        tools:text="20º" />
+        <TextView
+            android:id="@+id/tv_rain_chance_label"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/minPadding"
+            android:text="@string/rain_chance"
+            app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_value"
+            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />
 
-    <TextView
-        android:id="@+id/tv_weather_type"
-        style="@style/TextMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="10 м/с, Западный" />
+        <TextView
+            android:id="@+id/tv_rain_chance_value"
+            style="@style/TextMain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text='@{String.format("%s", viewmodel.currentWeather.main.pressure)}'
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
+            tools:text="10%" />
 
-    <TextView
-        android:id="@+id/tv_wind_label"
-        style="@style/TextAdditional"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/wind"
-        android:layout_marginBottom="@dimen/minPadding"
-        app:layout_constraintBottom_toTopOf="@+id/tv_wind_value"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_wind_value"
-        style="@style/TextMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/doubleMinPadding"
-        app:layout_constraintBottom_toTopOf="@+id/tv_humidity_label"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="10 м/с, Западный" />
-
-    <TextView
-        android:id="@+id/tv_humidity_label"
-        style="@style/TextAdditional"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/minPadding"
-        android:text="@string/humidity"
-        app:layout_constraintBottom_toTopOf="@+id/tv_humidity_value"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_humidity_value"
-        style="@style/TextMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="60%" />
-
-    <TextView
-        android:id="@+id/tv_pressure_label"
-        style="@style/TextAdditional"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/minPadding"
-        android:text="@string/pressure"
-        app:layout_constraintBottom_toTopOf="@+id/tv_pressure_value"
-        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />
-
-    <TextView
-        android:id="@+id/tv_pressure_value"
-        style="@style/TextMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/doubleMinPadding"
-        app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_label"
-        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
-        tools:text="752 мм рт. ст" />
-
-    <TextView
-        android:id="@+id/tv_rain_chance_label"
-        style="@style/TextAdditional"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/minPadding"
-        android:text="@string/rain_chance"
-        app:layout_constraintBottom_toTopOf="@+id/tv_rain_chance_value"
-        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline" />
-
-    <TextView
-        android:id="@+id/tv_rain_chance_value"
-        style="@style/TextMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
-        tools:text="10%" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
