--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -129,6 +129,7 @@
             style="@style/TextTemperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textScaleX="0.8"
             android:text='@{viewmodel.currentWeather.temp}'
             app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
             app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
@@ -140,7 +141,7 @@
             style="@style/TextMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text='@{viewmodel.currentWeather.wind}'
+            android:text='@{viewmodel.currentWeather.description}'
             app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -225,7 +226,7 @@
             style="@style/TextMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text='@{viewmodel.currentWeather.pressure}'
+            android:text='@{viewmodel.currentWeather.rainfallChance}'
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/vertical_center_guideline"
             tools:text="10%" />
