Added find city by name or ZIP feature. Added change city dialog fragment (WIP). Added text selector for clickable text views.

--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -92,6 +92,8 @@
         <TextView
             android:id="@+id/tv_change_city"
             style="@style/TextAdditional"
+            android:textColor="@drawable/button_text_selector"
+            android:onClick="@{() -> viewmodel.onChangeCityClick()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/doubleMinPadding"
@@ -102,6 +104,7 @@
         <TextView
             android:id="@+id/tv_current_location"
             style="@style/TextAdditional"
+            android:textColor="@drawable/button_text_selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_location"
