--- a/app/src/main/res/layout/fragment_change_city.xml
+++ b/app/src/main/res/layout/fragment_change_city.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View"/>
+
         <variable
             name="viewmodel"
             type="com.tadiuzzz.forecast.feature.changecity.ChangeCityViewModel" />
@@ -21,11 +23,12 @@
         tools:context=".feature.changecity.ChangeCityFragment">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_search_city_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Введите название населенного пункта или почтовый индекс"
-            app:layout_constraintBottom_toTopOf="@+id/editText"
+            style="@style/TextDialog"
+            android:text="@string/search_city_title"
+            app:layout_constraintBottom_toTopOf="@+id/et_search_city"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +36,8 @@
             app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/et_search_city"
+            style="@style/TextDialog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/minPadding"
@@ -45,20 +49,21 @@
             app:layout_constraintEnd_toStartOf="@+id/b_find"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_search_city_title" />
 
         <Button
             android:id="@+id/b_find"
+            style="@style/ButtonDialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/minPadding"
             android:text="Найти"
             android:onClick="@{() -> viewmodel.findCities()}"
-            app:layout_constraintBottom_toBottomOf="@+id/editText"
+            app:layout_constraintBottom_toBottomOf="@+id/et_search_city"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/editText"
-            app:layout_constraintTop_toTopOf="@+id/editText" />
+            app:layout_constraintStart_toEndOf="@+id/et_search_city"
+            app:layout_constraintTop_toTopOf="@+id/et_search_city" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_cities"
@@ -70,8 +75,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText"
+            app:layout_constraintTop_toBottomOf="@+id/et_search_city"
             tools:listitem="@layout/item_city"/>
+
+        <ProgressBar
+            android:id="@+id/pb_search"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="@{viewmodel.isLoadingVisible() ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
