--- a/app/src/main/res/layout/fragment_change_city.xml
+++ b/app/src/main/res/layout/fragment_change_city.xml
@@ -44,6 +44,7 @@
             android:layout_marginBottom="@dimen/minPadding"
             android:ems="10"
             android:inputType="textPersonName"
+            android:imeOptions="actionSearch"
             android:text="@={viewmodel.enteredCity}"
             app:layout_constraintBottom_toTopOf="@+id/rv_cities"
             app:layout_constraintEnd_toStartOf="@+id/b_find"
