--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -21,13 +21,17 @@
         <TextView
             android:id="@+id/tv_city"
             style="@style/TextCity"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_marginRight="@dimen/doubleMinPadding"
             android:layout_height="wrap_content"
             android:onClick="@{() -> viewmodel.onChangeCityClick()}"
             android:text="@{viewmodel.currentWeather.city}"
+            app:layout_constraintEnd_toStartOf="@+id/tv_switcher_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Краснодар" />
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintWidth_default="wrap"
+            tools:text="Набережные Челны На Дону" />
 
         <TextView
             android:id="@+id/tv_switcher_title"
@@ -159,12 +163,28 @@
             android:layout_marginBottom="@dimen/minPadding"
             android:layout_marginTop="@dimen/minPadding"
             android:text='@{viewmodel.currentWeather.description}'
-            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_weather_icon"
-            app:layout_constraintVertical_bias="0.0"
             tools:text="Облачно" />
+
+        <TextView
+            android:id="@+id/tv_date"
+            style="@style/TextAdditional"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@drawable/button_text_selector"
+            android:drawableEnd="@drawable/ic_refresh"
+            android:drawablePadding="@dimen/minPadding"
+            android:layout_marginTop="@dimen/minPadding"
+            android:text='@{viewmodel.currentWeather.date}'
+            android:onClick="@{() -> viewmodel.updateCurrentWeather()}"
+            app:layout_constraintBottom_toTopOf="@+id/tv_pressure_label"
+            app:layout_constraintEnd_toEndOf="@+id/tv_weather_type"
+            app:layout_constraintStart_toStartOf="@+id/tv_weather_type"
+            app:layout_constraintTop_toBottomOf="@+id/tv_weather_type"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="16.12.2019 23:17" />
 
         <TextView
             android:id="@+id/tv_wind_label"
